start building the header

--- a/index.html
+++ b/index.html
@@ -2,11 +2,26 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="vendors/css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="vendors/css/grid.css">
     <link rel="stylesheet" type="text/css" href="resources/css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;1,300&display=swap" rel="stylesheet">
     <title>Omnifood</title>
 </head>
 
 <body>
+
+<header>
+     <div class="hero-text-box">
+         <h1>Goodbye junk food. Hello super healthy meals.</h1>
+         <a href="#">I'm hungry</a>
+         <a href="#">Show me more</a>
+     </div>
+</header>
+
+
+</body>
+
 <div class="row">
     <div class="main">
         <h1>Contact Form</h1>
@@ -32,8 +47,8 @@
             <input type="submit" value="Submit">
         </form>
     </div>
-</div>
-</body><br>
+
+
 <div class="footer">
 
     <div class="text-left">
@@ -44,5 +59,6 @@
     <a href="https://www.jobs.ac.uk/legal/terms-and-conditions/">Terms of use</a>
     <a href="https://www.jobs.ac.uk/legal/privacy-policy/">Privacy Policy</a>
     <a href="https://www.jobs.ac.uk/legal/cookie-policy">Cookie Policy</a>
+</div>
 </div>
 </html>
