added the buttons

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <header>
      <div class="hero-text-box">
          <h1>Goodbye junk food. Hello super healthy meals.</h1>
-         <a href="#">I'm hungry</a>
-         <a href="#">Show me more</a>
+         <a class="btn btn-full" href="#">I'm hungry</a>
+         <a class="btn btn-ghost" href="#">Show me more</a>
      </div>
 </header>
 
@@ -27,7 +27,7 @@
         <h1>Contact Form</h1>
     </div>
     <div class="container">
-        <form action="/action_page.php">
+        <form action="">
             <label for="fname">First Name</label>
             <input type="text" id="fname" name="firstname" placeholder="Your name..">
 
