added images, navigation

--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
 <body>
 
 <header>
+    <nav>
+        <div class="row">
+            <img src="resources/img/logo-white.png" alt="Omnifood logo" class="logo">
+            <ul class="main-nav">
+                <li><a href="#">Food Delivery</a></li>
+                <li><a href="#">How it works</a></li>
+                <li><a href="#">Our Cities</a></li>
+                <li><a href="#">Sign Up</a></li>
+            </ul>
+        </div>
+    </nav>
      <div class="hero-text-box">
          <h1>Goodbye junk food. Hello super healthy meals.</h1>
          <a class="btn btn-full" href="#">I'm hungry</a>
@@ -21,33 +32,6 @@
 
 
 </body>
-
-<div class="row">
-    <div class="main">
-        <h1>Contact Form</h1>
-    </div>
-    <div class="container">
-        <form action="">
-            <label for="fname">First Name</label>
-            <input type="text" id="fname" name="firstname" placeholder="Your name..">
-
-            <label for="lname">Last Name</label>
-            <input type="text" id="lname" name="lastname" placeholder="Your last name..">
-
-            <label for="country">Country</label>
-            <select id="country" name="country">
-                <option value="australia">Australia</option>
-                <option value="canada">Canada</option>
-                <option value="usa">USA</option>
-            </select>
-
-            <label for="subject">Subject</label>
-            <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
-
-            <input type="submit" value="Submit">
-        </form>
-    </div>
-
 
 <div class="footer">
 
@@ -60,5 +44,5 @@
     <a href="https://www.jobs.ac.uk/legal/privacy-policy/">Privacy Policy</a>
     <a href="https://www.jobs.ac.uk/legal/cookie-policy">Cookie Policy</a>
 </div>
-</div>
+
 </html>
