build how it works section part 1

--- a/index.html
+++ b/index.html
@@ -116,18 +116,33 @@
         </li>
     </ul>
 </div>
-</body>
 
-<div class="footer">
+<div class="section-steps">
+    <div class="row">
+        <div class="col span-1-of-2">
+            <img src="resources/img/app-iPhone.png" alt="Omnifood app on iphone" class="app-screen">
+        </div>
 
-    <div class="text-left">
-        <a href="https://www.jobs.ac.uk/about/">About Us</a>
-        <a href="https://www.jobs.ac.uk/about/contact/">Contact Us</a>
+        <div class="col span-1-of-2">
+            <div class="works-step">
+                <div>1</div>
+                <p>Choose the subscription plan that best fits your needs and sign up today.</p>
+            </div>
+            <div class="works-step">
+                <div>2</div>
+                <p>Order your delicious meal using our mobile app or website. Or you can even call us!</p>
+            </div>
+            <div class="works-step">
+                <div>3</div>
+                <p>Enjoy your meal after less than 20 minutes. See you the next time!</p>
+            </div>
 
+            <a href="#" class="btn-app"><img src="resources/img/download-app-android.png" alt="App store button"></a>
+            <a href="#" class="btn-app"><img src="resources/img/download-app-android.png" alt="Play store button"></a>
+
+        </div>
     </div>
-    <a href="https://www.jobs.ac.uk/legal/terms-and-conditions/">Terms of use</a>
-    <a href="https://www.jobs.ac.uk/legal/privacy-policy/">Privacy Policy</a>
-    <a href="https://www.jobs.ac.uk/legal/cookie-policy">Cookie Policy</a>
 </div>
 
+</body>
 </html>
