build how it works section html, css, downloaded app store logo

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
      </div>
 </header>
 
-<div class="section-features">
+<section class="section-features">
     <div class="row">
         <h2>Get food fast &mdash; not fast food</h2>
         <p class="long-copy">
@@ -68,10 +68,10 @@
             </p>
         </div>
     </div>
-</div>
+</section>
 
-<div class="section-meals">
-    <ul class="meals-showcase">
+<section class="section-meals">
+    <ul class="meals-showcase clearfix">
         <li>
             <figure class="meal-photo">
              <img src="resources/img/1.jpg" alt="Korean bibimbap with egg and vegetables">
@@ -93,7 +93,7 @@
             </figure>
         </li>
     </ul>
-    <ul class="meals-showcase">
+    <ul class="meals-showcase clearfix">
         <li>
             <figure class="meal-photo">
                 <img src="resources/img/5.jpg" alt="Granola with cherries and strawberries">
@@ -115,15 +115,23 @@
             </figure>
         </li>
     </ul>
-</div>
+</section>
 
-<div class="section-steps">
+<section class="section-steps">
     <div class="row">
-        <div class="col span-1-of-2">
+        <div class="x-margin-top">
+            <h2>
+                How it works &mdash; Simple as 1, 2, 3
+            </h2>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col span-1-of-2 steps-box">
             <img src="resources/img/app-iPhone.png" alt="Omnifood app on iphone" class="app-screen">
         </div>
 
-        <div class="col span-1-of-2">
+        <div class="col span-1-of-2 steps-box">
             <div class="works-step">
                 <div>1</div>
                 <p>Choose the subscription plan that best fits your needs and sign up today.</p>
@@ -138,11 +146,10 @@
             </div>
 
             <a href="#" class="btn-app"><img src="resources/img/download-app-android.png" alt="App store button"></a>
-            <a href="#" class="btn-app"><img src="resources/img/download-app-android.png" alt="Play store button"></a>
-
+            <a href="#" class="btn-app"><img src="resources/img/download-app-store.png" alt="play store button"></a>
         </div>
     </div>
-</div>
+</section>
 
 </body>
 </html>
