--- a/index.html
+++ b/index.html
@@ -151,5 +151,112 @@
     </div>
 </section>
 
+<section class="section-cities">
+    <div class="row">
+        <div class="x-margin-top">
+            <h2>We're currently in these cities</h2>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col span-1-of-4 box">
+            <img src="resources/img/lisbon-3.jpg" alt="Lisbon">
+            <h3>Lisbon</h3>
+            <div class="city-feature">
+                <ion-icon name="person" class="icon-small"></ion-icon>
+                1600+ happy eaters
+            </div>
+            <div class="city-feature">
+                <ion-icon name="star" class="icon-small"></ion-icon>
+                75+ Top Chefs
+            </div>
+            <div class="city-feature">
+                <ion-icon name="logo-twitter" class="icon-small"></ion-icon>
+                <a href="#">@omnifood_lisbon</a>
+            </div>
+        </div>
+        <div class="col span-1-of-4 box">
+            <img src="resources/img/san-francisco.jpg" alt="San Francisco">
+            <h3>San Francisco</h3>
+            <div class="city-feature">
+                <ion-icon name="person" class="icon-small"></ion-icon>
+                2300+ happy eaters
+            </div>
+            <div class="city-feature">
+                <ion-icon name="star" class="icon-small"></ion-icon>
+                60+ Top Chefs
+            </div>
+            <div class="city-feature">
+                <ion-icon name="logo-twitter" class="icon-small"></ion-icon>
+                <a href="#">@omnifood_sfrancisco</a>
+            </div>
+        </div>
+        <div class="col span-1-of-4 box">
+            <img src="resources/img/berlin.jpg" alt="Berlin">
+            <h3>Berlin</h3>
+            <div class="city-feature">
+                <ion-icon name="person" class="icon-small"></ion-icon>
+                700+ happy eaters
+            </div>
+            <div class="city-feature">
+                <ion-icon name="star" class="icon-small"></ion-icon>
+                25+ Top Chefs
+            </div>
+            <div class="city-feature">
+                <ion-icon name="logo-twitter" class="icon-small"></ion-icon>
+                <a href="#">@omnifood_berlin</a>
+            </div>
+        </div>
+        <div class="col span-1-of-4 box">
+            <img src="resources/img/london.jpg" alt="London">
+            <h3>London</h3>
+            <div class="city-feature">
+                <ion-icon name="person" class="icon-small"></ion-icon>
+                2600+ happy eaters
+            </div>
+            <div class="city-feature">
+                <ion-icon name="star" class="icon-small"></ion-icon>
+                50+ Top Chefs
+            </div>
+            <div class="city-feature">
+                <ion-icon name="logo-twitter" class="icon-small"></ion-icon>
+                <a href="#">@omnifood_london</a>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </body>
 </html>
