--- a/index.html
+++ b/index.html
@@ -257,30 +257,76 @@
     </div>
 </section>
 
+<section class="section-plans">
+    <div class="row">
+        <div class="x-margin-top">
+            <h2>Start eating healthy today</h2>
+        </div>
+    </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    <div class="row">
+    <div class="col span-1-of-3">
+        <div class="plan-box">
+            <div>
+                <h3>Premium</h3>
+                <p class="plan-price">$399 <span>/ month</span></p>
+                <p class="plan-price-meal">That's only $13.30 per month</p>
+            </div>
+            <div>
+                <ul>
+                    <li><ion-icon name="checkmark" class="icon-small"></ion-icon>1 meal every day</li>
+                    <li><ion-icon name="checkmark" class="icon-small"></ion-icon>Order 24/7</li>
+                    <li><ion-icon name="checkmark" class="icon-small"></ion-icon>Access to newest creations</li>
+                    <li><ion-icon name="checkmark" class="icon-small"></ion-icon>Free Delivery</li>
+                </ul>
+            </div>
+            <div>
+                <a href="#" class="btn btn-full">Sign Up Now</a>
+            </div>
+        </div>
+    </div>
+    <div class="col span-1-of-3">
+        <div class="plan-box">
+            <div>
+                <h3>Pro</h3>
+                <p class="plan-price">$299 <span>/ month</span></p>
+                <p class="plan-price-meal">That's only $14.80 per month</p>
+            </div>
+            <div>
+                <ul>
+                    <li><ion-icon name="checkmark" class="icon-small"></ion-icon>1 meal 10 days / month</li>
+                    <li><ion-icon name="checkmark" class="icon-small"></ion-icon>Order 24/7</li>
+                    <li><ion-icon name="checkmark" class="icon-small"></ion-icon>Access to newest creations</li>
+                    <li><ion-icon name="checkmark" class="icon-small"></ion-icon>Free Delivery</li>
+                </ul>
+            </div>
+            <div>
+                <a href="#" class="btn btn-ghost">Sign Up Now</a>
+            </div>
+        </div>
+    </div>
+    <div class="col span-1-of-3">
+        <div class="plan-box">
+            <div>
+                <h3>Starter</h3>
+                <p class="plan-price">$199 <span>/ month</span></p>
+                <p class="plan-price-meal">&nbsp;</p>
+            </div>
+            <div>
+                <ul>
+                    <li><ion-icon name="checkmark" class="icon-small"></ion-icon>1 meal per day</li>
+                    <li><ion-icon name="checkmark" class="icon-small"></ion-icon>Order 24/7</li>
+                    <li><ion-icon name="close" class="icon-small"></ion-icon>Access to newest creations</li>
+                    <li><ion-icon name="checkmark" class="icon-small"></ion-icon>Free Delivery</li>
+                </ul>
+            </div>
+            <div>
+                <a href="#" class="btn btn-ghost">Sign Up Now</a>
+            </div>
+        </div>
+    </div>
+    </div>
+</section>
 
 
 
