--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         </div>
     </div>
 
-    <div class="row">
+    <div class="row x-padding-bottom">
         <div class="col span-1-of-2 steps-box">
             <img src="resources/img/app-iPhone.png" alt="Omnifood app on iphone" class="app-screen">
         </div>
@@ -158,7 +158,7 @@
         </div>
     </div>
 
-    <div class="row">
+    <div class="row x-padding-bottom">
         <div class="col span-1-of-4 box">
             <img src="resources/img/lisbon-3.jpg" alt="Lisbon">
             <h3>Lisbon</h3>
@@ -232,7 +232,7 @@
             <h2>Our Customers can't live without us</h2>
         </div>
     </div>
-    <div class="row">
+    <div class="row x-padding-bottom">
         <div class="col span-1-of-3">
             <blockquote>
                 Omnifood is just awesome! I just launched a startup which leaves me with no time for cooking,
@@ -264,7 +264,7 @@
         </div>
     </div>
 
-    <div class="row">
+    <div class="row x-padding-bottom">
     <div class="col span-1-of-3">
         <div class="plan-box">
             <div>
@@ -327,6 +327,90 @@
     </div>
     </div>
 </section>
+
+<section class="section-form">
+    <div class="row">
+        <div class="x-margin-top">
+            <h2>We're happy to hear from you</h2>
+        </div>
+    </div>
+
+    <div class="row x-padding-bottom">
+        <form method="post" action="#" class="contact-form">
+            <div class="row">
+                <div class="col span-1-of-3">
+                    <label for="name">Name</label>
+                </div>
+                <div class="col span-2-of-3">
+                    <input type="text" name="name" id="name" placeholder="Your name" required>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col span-1-of-3">
+                    <label for="email">Email</label>
+                </div>
+                <div class="col span-2-of-3">
+                    <input type="email" name="email" id="email" placeholder="Your email" required>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col span-1-of-3">
+                    <label for="find-us">How did you find us?</label>
+                </div>
+                <div class="col span-2-of-3">
+                    <select name="find-us" id="find-us">
+                        <option value="friends" selected>Friends</option>
+                        <option value="search">Search Engine</option>
+                        <option value="ad">Advertisement</option>
+                        <option value="other">Other</option>
+                    </select>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col span-1-of-3">
+                    <label>Newsletter?</label>
+                </div>
+                <div class="col span-2-of-3">
+                    <input type="checkbox" name="news" id="news" checked> Yes. please
+                </div>
+            </div>
+            <div class="row">
+                <div class="col span-1-of-3">
+                    <label>Drop us a line</label>
+                </div>
+                <div class="col span-2-of-3">
+                    <textarea name="message" placeholder="Your message"></textarea>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col span-1-of-3">
+                    <label>&nbsp;</label>
+                </div>
+                <div class="col span-2-of-3">
+                    <input type="submit" value="Send it!">
+                </div>
+            </div>
+
+
+
+
+        </form>
+
+
+
+    </div>
+</section>
+
+
+
+
+
+
+
+
+
+
+
 
 
 
