--- a/index.html
+++ b/index.html
@@ -390,16 +390,36 @@
                     <input type="submit" value="Send it!">
                 </div>
             </div>
-
-
-
-
         </form>
-
-
-
     </div>
 </section>
+
+<footer>
+    <div class="row">
+        <div class="col span-1-of-2">
+            <ul class="footer-nav">
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Press</a></li>
+                <li><a href="#">iOS App</a></li>
+                <li><a href="#">Android App</a></li>
+            </ul>
+        </div>
+        <div class="col span-1-of-2">
+            <ul class="social-links">
+                <li><a href="#"><ion-icon name="logo-facebook" class="logo-facebook"></ion-icon></a></li>
+                <li><a href="#"><ion-icon name="logo-twitter" class="logo-twitter"></ion-icon></a></li>
+                <li><a href="#"><ion-icon name="logo-google" class="logo-google"></ion-icon></a></li>
+                <li><a href="#"><ion-icon name="logo-instagram" class="logo-instagram"></ion-icon></a></li>
+            </ul>
+        </div>
+    </div>
+    <div class="row">
+        <p>
+            Copyright &copy; 2020 by Omnifood. All rights reserved.
+        </p>
+    </div>
+</footer>
 
 
 
