--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8">
     <link rel="stylesheet" type="text/css" href="vendors/css/normalize.css">
     <link rel="stylesheet" type="text/css" href="vendors/css/grid.css">
     <link rel="stylesheet" type="text/css" href="resources/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;1,300&display=swap" rel="stylesheet">
-    <script src="https://unpkg.com/ionicons@5.2.1/dist/ionicons.js"></script>
     <title>Omnifood</title>
 </head>
 
@@ -188,7 +187,7 @@
             </div>
             <div class="city-feature">
                 <ion-icon name="logo-twitter" class="icon-small"></ion-icon>
-                <a href="#">@omnifood_sfrancisco</a>
+                <a href="#">@omnifood_sf</a>
             </div>
         </div>
         <div class="col span-1-of-4 box">
@@ -420,23 +419,9 @@
         </p>
     </div>
 </footer>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 </body>
+<script src="https://unpkg.com/ionicons@5.2.1/dist/ionicons.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/respond@0.9.0/main.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/html5shiv@3.7.3/dist/html5shiv.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/selectivizr@1.0.3/selectivizr.min.js"></script>
 </html>
