added the sticky navigation

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <nav>
         <div class="row">
             <img src="resources/img/logo-white.png" alt="Omnifood logo" class="logo">
+            <img src="resources/img/logo.png" alt="Omnifood logo" class="logo-black">
             <ul class="main-nav">
                 <li><a href="#">Food Delivery</a></li>
                 <li><a href="#">How it works</a></li>
@@ -29,7 +30,7 @@
      </div>
 </header>
 
-<section class="section-features">
+<section class="section-features js--section-features">
     <div class="row">
         <h2>Get food fast &mdash; not fast food</h2>
         <p class="long-copy">
@@ -419,9 +420,13 @@
         </p>
     </div>
 </footer>
-</body>
 <script src="https://unpkg.com/ionicons@5.2.1/dist/ionicons.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/respond@0.9.0/main.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/html5shiv@3.7.3/dist/html5shiv.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/selectivizr@1.0.3/selectivizr.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="vendors/js/jquery.waypoints.min.js"></script>
+<script src="resources/js/script.js"></script>
+</body>
+
 </html>
