--- a/index.html
+++ b/index.html
@@ -16,21 +16,22 @@
             <img src="resources/img/logo-white.png" alt="Omnifood logo" class="logo">
             <img src="resources/img/logo.png" alt="Omnifood logo" class="logo-black">
             <ul class="main-nav">
-                <li><a href="#">Food Delivery</a></li>
-                <li><a href="#">How it works</a></li>
-                <li><a href="#">Our Cities</a></li>
-                <li><a href="#">Sign Up</a></li>
+                <li><a href="#features">Food Delivery</a></li>
+                <li><a href="#works">How it works</a></li>
+                <li><a href="#cities">Our Cities</a></li>
+                <li><a href="#plans">Sign Up</a></li>
             </ul>
+            <a class="mobile-nav-icon"><ion-icon name="reorder-four-outline"></ion-icon></a>
         </div>
     </nav>
      <div class="hero-text-box">
          <h1>Goodbye junk food. Hello super healthy meals.</h1>
-         <a class="btn btn-full" href="#">I'm hungry</a>
-         <a class="btn btn-ghost" href="#">Show me more</a>
+         <a class="btn btn-full js--scroll-to-plans" href="#">I'm hungry</a>
+         <a class="btn btn-ghost js--scroll-to-start" href="#">Show me more</a>
      </div>
 </header>
 
-<section class="section-features js--section-features">
+<section class="section-features js--section-features" id="features">
     <div class="row">
         <h2>Get food fast &mdash; not fast food</h2>
         <p class="long-copy">
@@ -117,7 +118,7 @@
     </ul>
 </section>
 
-<section class="section-steps">
+<section class="section-steps" id="works">
     <div class="row">
         <div class="x-margin-top">
             <h2>
@@ -151,7 +152,7 @@
     </div>
 </section>
 
-<section class="section-cities">
+<section class="section-cities" id="cities">
     <div class="row">
         <div class="x-margin-top">
             <h2>We're currently in these cities</h2>
@@ -257,7 +258,7 @@
     </div>
 </section>
 
-<section class="section-plans">
+<section class="section-plans js--section-plans" id="plans">
     <div class="row">
         <div class="x-margin-top">
             <h2>Start eating healthy today</h2>
