working on the header responsiveness for mobile devices

--- a/index.html
+++ b/index.html
@@ -15,15 +15,20 @@
         <div class="row">
             <img src="resources/img/logo-white.png" alt="Omnifood logo" class="logo">
             <img src="resources/img/logo.png" alt="Omnifood logo" class="logo-black">
-            <ul class="main-nav">
-                <li><a href="#features">Food Delivery</a></li>
-                <li><a href="#works">How it works</a></li>
-                <li><a href="#cities">Our Cities</a></li>
-                <li><a href="#plans">Sign Up</a></li>
-            </ul>
-            <a class="mobile-nav-icon"><ion-icon name="reorder-four-outline"></ion-icon></a>
+            <div class="menu">
+                <ul class="main-nav js--main-nav">
+                    <li><a href="#features">Food Delivery</a></li>
+                    <li><a href="#works">How it works</a></li>
+                    <li><a href="#cities">Our Cities</a></li>
+                    <li><a href="#plans">Sign Up</a></li>
+                </ul>
+            </div>
+
+            <button class="hamburger">&#9776;</button>
+            <button class="cross">&#735;</button>
         </div>
     </nav>
+
      <div class="hero-text-box">
          <h1>Goodbye junk food. Hello super healthy meals.</h1>
          <a class="btn btn-full js--scroll-to-plans" href="#">I'm hungry</a>
