worked in the nav, hamburger and cross buttons completed, responsive to mobile devices

--- a/index.html
+++ b/index.html
@@ -15,17 +15,16 @@
         <div class="row">
             <img src="resources/img/logo-white.png" alt="Omnifood logo" class="logo">
             <img src="resources/img/logo.png" alt="Omnifood logo" class="logo-black">
-            <div class="menu">
-                <ul class="main-nav js--main-nav">
+
+                <ul class="main-nav js--main-nav- js--menu">
                     <li><a href="#features">Food Delivery</a></li>
                     <li><a href="#works">How it works</a></li>
                     <li><a href="#cities">Our Cities</a></li>
                     <li><a href="#plans">Sign Up</a></li>
                 </ul>
-            </div>
-
-            <button class="hamburger">&#9776;</button>
+           <button class="hamburger">&#9776;</button>
             <button class="cross">&#735;</button>
+
         </div>
     </nav>
 
@@ -434,5 +433,4 @@
 <script src="vendors/js/jquery.waypoints.min.js"></script>
 <script src="resources/js/script.js"></script>
 </body>
-
 </html>
