--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
             <img src="resources/img/logo.png" alt="Omnifood logo" class="logo-black">
 
                 <ul class="main-nav js--main-nav- js--menu">
-                    <li><a href="#features">Food Delivery</a></li>
-                    <li><a href="#works">How it works</a></li>
-                    <li><a href="#cities">Our Cities</a></li>
-                    <li><a href="#plans">Sign Up</a></li>
+                    <li><a href="#features">Home</a></li>
+                    <li><a href="#works">Prices</a></li>
+                    <li><a href="#cities">Services</a></li>
+                    <li><a href="#plans">Blog</a></li>
+                    <li><a href="#plans">Contact Us</a></li>
                 </ul>
            <button class="hamburger">&#9776;</button>
             <button class="cross">&#735;</button>
