--- a/index.html
+++ b/index.html
@@ -6,35 +6,50 @@
     <link rel="stylesheet" type="text/css" href="vendors/css/grid.css">
     <link rel="stylesheet" type="text/css" href="resources/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;1,300&display=swap" rel="stylesheet">
-    <title>Omnifood</title>
+    <title>AidaNails</title>
 </head>
 
 <body>
-<header>
-    <nav>
-        <div class="row">
-            <img src="resources/img/logo-white.png" alt="Omnifood logo" class="logo">
-            <img src="resources/img/logo.png" alt="Omnifood logo" class="logo-black">
+    <header>
+        <nav>
+            <div class="row">
+                <img src="resources/img/logo-white.png" alt="Omnifood logo" class="logo">
+                <img src="resources/img/logo.png" alt="Omnifood logo" class="logo-black">
 
-                <ul class="main-nav js--main-nav- js--menu">
-                    <li><a href="#features">Home</a></li>
-                    <li><a href="#works">Prices</a></li>
-                    <li><a href="#cities">Services</a></li>
-                    <li><a href="#plans">Blog</a></li>
-                    <li><a href="#plans">Contact Us</a></li>
-                </ul>
-           <button class="hamburger">&#9776;</button>
-            <button class="cross">&#735;</button>
+                    <ul class="main-nav js--menu">
+                        <li><a href="#features">Home</a></li>
+                        <li><a href="#works">Prices</a></li>
+                        <li><a href="#cities">Services</a></li>
+                        <li><a href="#plans">Blog</a></li>
+                        <li><a href="#plans">Contact Us</a></li>
+                    </ul>
+            <button class="hamburger">&#9776;</button>
+                <button class="cross">&#735;</button>
+            </div>
+        </nav>
 
-        </div>
-    </nav>
+        
+    </header>
 
-     <div class="hero-text-box">
-         <h1>Goodbye junk food. Hello super healthy meals.</h1>
-         <a class="btn btn-full js--scroll-to-plans" href="#">I'm hungry</a>
-         <a class="btn btn-ghost js--scroll-to-start" href="#">Show me more</a>
-     </div>
-</header>
+<section class="section-header">
+    <img src="resources/img/picture19.jpg" alt="frontPicture">
+    <div class="hero-text-box">
+        <a class="btn btn-full js--scroll-to-plans" href="#">Make an Appointment</a>
+    </div>
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 <section class="section-features js--section-features" id="features">
     <div class="row">
@@ -401,17 +416,24 @@
 </section>
 
 <footer>
-    <div class="row">
-        <div class="col span-1-of-2">
-            <ul class="footer-nav">
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Press</a></li>
-                <li><a href="#">iOS App</a></li>
-                <li><a href="#">Android App</a></li>
-            </ul>
+    <section class="section-footer">
+        <div class="col span-1-of-3">
+                <p>34 Regent Street</p>
+                <p>Leamington Spa</p>
+                <p>CV32 5EG</p><br>
+
+                <h3>Opening Times</h3>
+                <p>Segunda as Sextas - Das 10:00 as 20:00</p>
+                <p>Sabado - Das 10:00 as 18:00</p>
+                <p>Domingo - Fechado</p>
         </div>
-        <div class="col span-1-of-2">
+        <div class="col span-1-of-3">
+            <p>Email: aidanails@hotmail</p>
+            <p>Telefone: 01926 311177</p>
+            <p><a href="#"></a>Aftercare Advice</p>
+            <p><a href="#"></a>Special Offers</p>
+        </div>
+        <div class="col span-1-of-3">
             <ul class="social-links">
                 <li><a href="#"><ion-icon name="logo-facebook" class="logo-facebook"></ion-icon></a></li>
                 <li><a href="#"><ion-icon name="logo-twitter" class="logo-twitter"></ion-icon></a></li>
@@ -419,12 +441,7 @@
                 <li><a href="#"><ion-icon name="logo-instagram" class="logo-instagram"></ion-icon></a></li>
             </ul>
         </div>
-    </div>
-    <div class="row">
-        <p>
-            Copyright &copy; 2020 by Omnifood. All rights reserved.
-        </p>
-    </div>
+    </section>
 </footer>
 <script src="https://unpkg.com/ionicons@5.2.1/dist/ionicons.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/respond@0.9.0/main.min.js"></script>
