removed the empty gaps

--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
 </section>
 
 <footer>
-    <section class="section-footer">
+    <div class="section-footer">
         <div class="col span-1-of-3">
                 <p>34 Regent Street</p>
                 <p>Leamington Spa</p>
@@ -441,7 +441,7 @@
                 <li><a href="#"><ion-icon name="logo-instagram" class="logo-instagram"></ion-icon></a></li>
             </ul>
         </div>
-    </section>
+    </div>
 </footer>
 <script src="https://unpkg.com/ionicons@5.2.1/dist/ionicons.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/respond@0.9.0/main.min.js"></script>
