changed the images in the front page

--- a/index.html
+++ b/index.html
@@ -95,44 +95,44 @@
     <ul class="meals-showcase clearfix">
         <li>
             <figure class="meal-photo">
-             <img src="resources/img/1.jpg" alt="Korean bibimbap with egg and vegetables">
+             <img src="resources/img/picture76.jpg" alt="eyebrows">
             </figure>
         </li>
         <li>
             <figure class="meal-photo">
-                <img src="resources/img/2.jpg" alt="Simple italian pizza with cherry tomatoes">
+                <img src="resources/img/nails3.jpg" alt="nails3">
             </figure>
         </li>
         <li>
             <figure class="meal-photo">
-                <img src="resources/img/3.jpg" alt="Autumn pumpkin soup">
+                <img src="resources/img/nails4.jpg" alt="nails4">
             </figure>
         </li>
         <li>
             <figure class="meal-photo">
-                <img src="resources/img/4.jpg" alt="Paleo beef steak with vegetables">
+                <img src="resources/img/picture33.jpg" alt="nails5">
             </figure>
         </li>
     </ul>
     <ul class="meals-showcase clearfix">
         <li>
             <figure class="meal-photo">
-                <img src="resources/img/5.jpg" alt="Granola with cherries and strawberries">
+                <img src="resources/img/picture33.jpg" alt="picture33">
             </figure>
         </li>
         <li>
             <figure class="meal-photo">
-                <img src="resources/img/6.jpg" alt="Burger with cheddar and bacon">
+                <img src="resources/img/picture34.jpg" alt="Burger with cheddar and bacon">
             </figure>
         </li>
         <li>
             <figure class="meal-photo">
-                <img src="resources/img/7.jpg" alt="Healthy baguette with egg and vegetables">
+                <img src="resources/img/picture76.jpg" alt="Healthy baguette with egg and vegetables">
             </figure>
         </li>
         <li>
             <figure class="meal-photo">
-                <img src="resources/img/8.jpg" alt="Chicken breast steak with vegetables">
+                <img src="resources/img/nails4.jpg" alt="Chicken breast steak with vegetables">
             </figure>
         </li>
     </ul>
