created the welcome section, added images

--- a/index.html
+++ b/index.html
@@ -27,65 +27,57 @@
                 <button class="cross">&#735;</button>
             </div>
         </nav>
-
-        
     </header>
 
 <section class="section-header">
     <img src="resources/img/picture19.jpg" alt="frontPicture">
     <div class="hero-text-box">
-        <a class="btn btn-full js--scroll-to-plans" href="#">Make an Appointment</a>
+        <a class="btn btn-full js--scroll-to-plans" href="#">Marque uma consulta</a>
     </div>
 </section>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
 <section class="section-features js--section-features" id="features">
     <div class="row">
-        <h2>Get food fast &mdash; not fast food</h2>
+        <h2>Bem-vinda</h2>
         <p class="long-copy">
-            Hello, we’re Omnifood, your new premium food delivery service. We know you’re always busy. No time for cooking. So let us take care of that, we’re really good at it, we promise!
+            Na AidaNails você encontrará uma variedade de tratamentos de unhas práticos e de alta qualidade. Para nós, você é mais do que apenas um número, oferecemos apenas serviços que criam unhas bonitas e saudáveis. Você não verá lima excessiva ou corte de cutícula, e levamos tempo para entender a aparência desejada e o que você necessita na hora. Deixe-nos cuidar do teu visual, Obrigada pela Opçao.
         </p>
     </div>
 
+
+    <h2>Nossos tratamentos</h2>
+    <p class="long-copy">
+        Só usamos produtos de qualidade para reduzir a poeira e odores fortes. Usamos produtos Semilac com cores de gel UV híbrido altamente pigmentadas e acabamentos de unha criativos.
+        Então relaxe - converse, pegue um conjunto de unhas bonito e delicie-se com um copo de espumante ou um café.
+    </p>
+
     <div class="row">
         <div class="col span-1-of-4 box">
-            <ion-icon name="infinite-outline" class="icon-big"></ion-icon>
-            <h3>Up to 365 days/year</h3>
+            <img src="resources/img/nail-ext.png" alt="frontPicture">
+            <h3>Extensões de gel ou acrílico</h3>
             <p>
-                Never cook again! We really mean that. Our subscription plans include up to 365 days/year coverage. You can also choose to order more flexibly if that's your style.
+                As extensões de gel ou acrílico são projetadas para estender o comprimento da unha natural usando um gel especial de construção, pó acrílico para esculpir ou usar pontas de plástico. Inclui: tratamento de unhas e cutículas, extensão da unha, escolha da cor do gel e acabamento.
             </p>
         </div>
         <div class="col span-1-of-4 box">
-            <ion-icon name="stopwatch-outline" class="icon-big"></ion-icon>
-            <h3>Ready in 20 minutes</h3>
+            <img src="resources/img/infill.png" alt="frontPicture">
+            <h3>Preenchimento</h3>
             <p>
-                You're only twenty minutes away from your delicious and super healthy meals delivered right to your home. We work with the best chefs in each town to ensure that you're 100% happy.
+                Lixaremos a linha de enchimento / regeneração e reaplicaremos o gel / acrílico para que a unha fique como nova e aplicaremos o esmalte de gel de sua escolha.
             </p>
         </div>
         <div class="col span-1-of-4 box">
-            <ion-icon name="nutrition-outline" class="icon-big"></ion-icon>
-            <h3>100% organic</h3>
+            <img src="resources/img/pedicure.png" alt="frontPicture">
+            <h3>Uma manicure luxuosa</h3>
             <p>
-                All our vegetables are fresh, organic and local. Animals are raised without added hormones or antibiotics. Good for your health, the environment, and it also tastes better!
+                Uma mão longa embebe e esfolia a pele para retirar a pele morta, amacia e arruma as cutículas, lixa e molda as unhas, massageia as mãos e aplique esmalte em gel seguido de óleo de cutícula e loção hidratante.
             </p>
         </div>
         <div class="col span-1-of-4 box">
-            <ion-icon name="cart-outline" class="icon-big"></ion-icon>
-            <h3>Order anything</h3>
+            <img src="resources/img/manicure.png" alt="frontPicture">
+            <h3>Pedicure de Rainha</h3>
             <p>
-                We don't limit your creativity, which means you can order whatever you feel like. You can also choose from our menu containing over 100 delicious meals. It's up to you!
+                Uma nova pedicure de luxo em nossas tigelas de cobre. Usar sais do Himalaia para embeber os pés com uma esfoliação de sal marinho e raspar o pé para remover a pele dura, antes de envolver o pé em uma máscara de hortelã-pimenta aquecida profundamente hidratante e finalizar com um óleo de massagem para pés e pernas. Maravilhosamente relaxante e hidratante. Seguido pela sua escolha de polonês em gel.
             </p>
         </div>
     </div>
