added the aftercare page

--- a/index.html
+++ b/index.html
@@ -314,24 +314,24 @@
     <footer>
         <div class="section-footer">
             <div class="col span-1-of-3">
-                <p>34 Regent Street</p>
-                <p>Leamington Spa</p>
-                <p>CV32 5EG</p><br>
+                <p>R. Sebastião da Gama No 8B</p>
+                <p>2700-770 - Amadora</p>
+                <p>Portugal</p><br>
 
                 <h3>Opening Times</h3>
-                <p>Segunda as Sextas - Das 10:00 as 20:00</p>
-                <p>Sabado - Das 10:00 as 18:00</p>
+                <p>Segunda as Sextas - Das 09:30 as 19:30</p>
+                <p>Sabado - Das 09:30 as 19:30</p>
                 <p>Domingo - Fechado</p>
             </div>
             <div class="col span-1-of-3">
-                <p>Email: aidanails@hotmail</p>
-                <p>Telefone: 01926 311177</p>
-                <p><a href="#"></a>Aftercare Advice</p>
-                <p><a href="#"></a>Special Offers</p>
+                <p>Email: aidinha2001@gmail.com</p>
+                <p>Telefone: +351 963 254 009</p><br>
+                <a href="resources/views/aftercare.html">Ofertas especiais</a><br><br>
+                <a href="aftercare.html">Aftercare Advice</a>
             </div>
             <div class="col span-1-of-3">
                 <ul class="social-links">
-                    <li><a href="#">
+                    <li><a href="https://www.facebook.com/aidanails14">
                             <ion-icon name="logo-facebook" class="logo-facebook"></ion-icon>
                         </a></li>
                     <li><a href="#">
