completed the aftercare page

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
                 <ul class="main-nav js--menu">
                     <li><a href="#features">Home</a></li>
                     <li><a href="#works">Prices</a></li>
-                    <li><a href="#cities">Services</a></li>
+                    <li><a href="#cities">Gallery</a></li>
+                    <li><a href="#cities">Special Offers</a></li>
                     <li><a href="#plans">Blog</a></li>
                     <li><a href="#plans">Contact Us</a></li>
                 </ul>
