--- a/index.html
+++ b/index.html
@@ -28,10 +28,9 @@
 
                 <ul class="main-nav js--menu">
                     <li><a href="#features">Home</a></li>
-                    <li><a href="#works">Prices</a></li>
+                    <li><a href="prices.html">Prices</a></li>
                     <li><a href="#cities">Gallery</a></li>
                     <li><a href="#cities">Special Offers</a></li>
-                    <li><a href="#plans">Blog</a></li>
                     <li><a href="#plans">Contact Us</a></li>
                 </ul>
                 <button class="hamburger">&#9776;</button>
