finish prices page

--- a/prices.html
+++ b/prices.html
@@ -67,28 +67,41 @@
                 <div class="col span-1-of-2 box">
                     <img src="resources/img/nail-ext.png" alt="frontPicture">
                     <h3>Extensões de gel ou acrílico</h3>
+                    <b>
+                        <p class="long-copy">
+                            As extensões de gel ou acrílico são projetadas para estender o comprimento da unha natural
+                            usando um gel especial de construção, pó acrílico para esculpir ou usar pontas de plástico.
+                            Inclui: tratamento de unhas e cutículas, extensão da unha, escolha da cor do gel e
+                            acabamento.
+                            Desenhos de strass (por unha) £ 2,00 Folhas para Nail Art (por unha) £ 2,00 Remoção de unhas
+                            £ 10,00 * A manutenção inclui até 2 unhas quebradas.
+                        </p>
+                    </b>
                     <p class="long-copy">
                     <ul>
                         <li>
-                            Lave os pés diariamente e seque bem, use um pó para pés se seus pés suarem.
+                            Conjunto completo de unhas acrílicas (coloridas) £ 36,00
                         </li>
                         <li>
-                            Evite usar sapatos justos, meias ou meias com muita frequência, deixe os pés respirarem.
-
-                        </li>
-                        <li>
-                            Use uma pedra-pomes ou esfoliante nos pés semanalmente para manter a pele dura sob controle
-                            O uso regular de um bálsamo hidratante para o calcanhar (como o Flexitol disponível em Boots
-                            /
-                            Superdrug) manterá a pele do calcanhar flexível.
-                        </li>
-                        <li>
-                            Use loção hidratante nos pés e nas pernas para manter a pele macia e melhorar a circulação.
-
+                            Conjunto completo de unhas de gel £ 35,00
                         </li>
                         <li>
                             Corte e lixe as unhas retas e mantenha-as em local adequado, mas não use limas de metal.
-
+                        </li>
+                        <li>
+                            Top Coat em gel (alto brilho sobre acrílico) £ 3,50
+                        </li>
+                        <li>
+                            Sobreposição rosa ou transparente £ 20,00
+                        </li>
+                        <li>
+                            Manutenção - (colorido) £ 26,00
+                        </li>
+                        <li>
+                            Unha quebrada individual (cada) £ 3,50
+                        </li>
+                        <li>
+                            Remoção de unhas £ 10,00
                         </li>
                     </ul>
                     </p>
@@ -97,30 +110,22 @@
                 <div class="col span-1-of-2 box">
                     <img src="resources/img/infill.png" alt="frontPicture">
                     <h3>Preenchimento</h3>
+                    <b>
+                        <p class="long-copy">
+                            Lixaremos a linha de enchimento / regeneração e reaplicaremos o gel / acrílico para que a
+                            unha fique como nova e aplicaremos o esmalte de gel de sua escolha.
+                        </p>
+                    </b>
                     <p class="long-copy">
                     <ul>
                         <li>
-                            Seja extremamente cuidadoso ao usar acessórios para unhas.
+                            Preenchimentos de acrílico por um técnico sênior £ 30
                         </li>
                         <li>
-                            Tenha cuidado com os puxadores das portas dos carros, use uma colher para abrir latas /
-                            puxadores de
-                            argolas.
+                            Preenchimentos de gel duro £ 35
                         </li>
                         <li>
-                            Lave as mãos imediatamente após o banho e as banheiras de hidromassagem para remover o
-                            cloro, que
-                            pode enfraquecer as unhas e desbotar as cores de esmalte.
-                        </li>
-                        <li>
-                            Sempre luvas para trabalhos de limpeza e jardinagem. Detergentes fortes, como alvejantes e
-                            produtos
-                            de limpeza, podem descolorir as unhas.
-                        </li>
-                        <li>
-                            O oxigênio pode atrapalhar a velocidade do processo de secagem, então, usando um óleo de
-                            cutícula,
-                            você ajuda a selar as unhas, agilizando o processo de cura.
+                            Reshape / Shorten £5
                         </li>
                     </ul>
                     </p>
@@ -136,105 +141,90 @@
                     </p>
                 </b>
             </div>
-
-
-
             <div class="row">
                 <div class="col span-1-of-3 box">
-                    <img src="resources/img/nail-ext.png" alt="frontPicture">
-                    <h3>Extensões de gel ou acrílico</h3>
                     <p class="long-copy">
                     <ul>
                         <li>
-                            Lave os pés diariamente e seque bem, use um pó para pés se seus pés suarem.
+                            Nail art sob medida a partir de £ 5
                         </li>
                         <li>
-                            Evite usar sapatos justos, meias ou meias com muita frequência, deixe os pés respirarem.
-
+                            Francês £ 3
                         </li>
                         <li>
-                            Use uma pedra-pomes ou esfoliante nos pés semanalmente para manter a pele dura sob controle
-                            O uso regular de um bálsamo hidratante para o calcanhar (como o Flexitol disponível em Boots
-                            /
-                            Superdrug) manterá a pele do calcanhar flexível.
+                            Olho de gato £ 3
                         </li>
                         <li>
-                            Use loção hidratante nos pés e nas pernas para manter a pele macia e melhorar a circulação.
-
+                            Sereia / pó brilhante £ 3
                         </li>
                         <li>
-                            Corte e lixe as unhas retas e mantenha-as em local adequado, mas não use limas de metal.
-
+                            Térmico (mudança de cor) £ 3
+                        </li>
+                        <li>
+                            Dicas extravagantes, divisas, chamas (mãos completas) £ 15
+                        </li>
+                        <li>
+                            Nail Art sob medida em um único dedo (cereja, corações etc.) £ 5 por unha
                         </li>
                     </ul>
                     </p>
                 </div>
 
                 <div class="col span-1-of-3 box">
-                    <img src="resources/img/infill.png" alt="frontPicture">
-                    <h3>Preenchimento</h3>
                     <p class="long-copy">
                     <ul>
                         <li>
-                            Seja extremamente cuidadoso ao usar acessórios para unhas.
+                            Chrome (2-3 unhas) £ 3
                         </li>
                         <li>
-                            Tenha cuidado com os puxadores das portas dos carros, use uma colher para abrir latas /
-                            puxadores de
-                            argolas.
+                            Gemas de caviar £ 3 por unha
                         </li>
                         <li>
-                            Lave as mãos imediatamente após o banho e as banheiras de hidromassagem para remover o
-                            cloro, que
-                            pode enfraquecer as unhas e desbotar as cores de esmalte.
+                            Grandes joias e cristais de 50 centavos cada
                         </li>
                         <li>
-                            Sempre luvas para trabalhos de limpeza e jardinagem. Detergentes fortes, como alvejantes e
-                            produtos
-                            de limpeza, podem descolorir as unhas.
+                            Listras £ 3 por mão
                         </li>
                         <li>
-                            O oxigênio pode atrapalhar a velocidade do processo de secagem, então, usando um óleo de
-                            cutícula,
-                            você ajuda a selar as unhas, agilizando o processo de cura.
+                            Folhas £ 5
+                        </li>
+                        <li>
+                            Unhas encapsuladas com glitter £ 3 por unha
+                        </li>
+                        <li>
+                            Unhas encapsuladas com flores, rendas, etc. £ 5 por unha
                         </li>
                     </ul>
                     </p>
                 </div>
 
                 <div class="col span-1-of-3 box">
-                    <img src="resources/img/infill.png" alt="frontPicture">
-                    <h3>Preenchimento</h3>
                     <p class="long-copy">
                     <ul>
                         <li>
-                            Seja extremamente cuidadoso ao usar acessórios para unhas.
+                            Mármore (1-2 pregos) £ 5
                         </li>
                         <li>
-                            Tenha cuidado com os puxadores das portas dos carros, use uma colher para abrir latas /
-                            puxadores de
-                            argolas.
+                            Estampa de leopardo, camuflagem (1-2 unhas) £ 5
                         </li>
                         <li>
-                            Lave as mãos imediatamente após o banho e as banheiras de hidromassagem para remover o
-                            cloro, que
-                            pode enfraquecer as unhas e desbotar as cores de esmalte.
+                            Glitter Ombre £ 5
                         </li>
                         <li>
-                            Sempre luvas para trabalhos de limpeza e jardinagem. Detergentes fortes, como alvejantes e
-                            produtos
-                            de limpeza, podem descolorir as unhas.
+                            Chrome (mãos completas) £ 10
                         </li>
                         <li>
-                            O oxigênio pode atrapalhar a velocidade do processo de secagem, então, usando um óleo de
-                            cutícula,
-                            você ajuda a selar as unhas, agilizando o processo de cura.
+                            Cutículas artísticas, punhos, luas (mãos inteiras) £ 15
+                        </li>
+                        <li>
+                            O caso quebrado - Reparos únicos em acessórios danificados £ 4 por prego 3 ou mais pregos
+                            faltando serão cobrados em nosso preço de conjunto completo. Faltam 4 ou mais pregos,
+                            recomendamos um molho e um novo conjunto de reposição.
                         </li>
                     </ul>
                     </p>
                 </div>
             </div>
-
         </div>
     </section>
 
