created the contact us page, added svg icons

--- a/aftercare.html
+++ b/aftercare.html
@@ -27,11 +27,11 @@
                 <img src="resources/img/logo.png" alt="Omnifood logo" class="logo-black">
 
                 <ul class="main-nav js--menu">
-                    <li><a href="#features">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="#works">Prices</a></li>
                     <li><a href="#cities">Special Offers</a></li>
                     <li><a href="#cities">Gallery</a></li>
-                    <li><a href="#plans">Contact Us</a></li>
+                    <li><a href="contactus.html">Contact Us</a></li>
                 </ul>
                 <button class="hamburger">&#9776;</button>
                 <button class="cross">&#735;</button>
