added the special offers page

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="prices.html">Prices</a></li>
                     <li><a href="#cities">Gallery</a></li>
-                    <li><a href="#cities">Special Offers</a></li>
+                    <li><a href="specialoffers.html">Special Offers</a></li>
                     <li><a href="contactus.html">Contact Us</a></li>
                 </ul>
                 <button class="hamburger">&#9776;</button>
@@ -56,7 +56,6 @@
                 desejada e o que você necessita na hora. Deixe-nos cuidar do teu visual, Obrigada pela Opçao.
             </p>
         </div>
-
 
         <h2>Nossos tratamentos</h2>
         <p class="long-copy">
