--- a/prices.html
+++ b/prices.html
@@ -29,7 +29,7 @@
                 <ul class="main-nav js--menu">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="prices.html">Prices</a></li>
-                    <li><a href="#cities">Special Offers</a></li>
+                    <li><a href="specialoffers.html">Special Offers</a></li>
                     <li><a href="#cities">Gallery</a></li>
                     <li><a href="contactus.html">Contact Us</a></li>
                 </ul>
