--- a/gallery.html
+++ b/gallery.html
@@ -39,68 +39,20 @@
         </nav>
     </header>
 
-    <section class="section-header">
-        <img src="resources/img/picture19.jpg" alt="frontPicture">
-        <div class="hero-text-box">
-            <a class="btn btn-full js--scroll-to-plans" href="#">Marque uma consulta</a>
-        </div>
-    </section>
-
-    <section class="section-features js--section-features" id="features">
-        <div class="row">
-            <h2>Contact Us</h2>
-
-            <p>R. Sebastião da Gama No 8B</p>
-            <p>2700-770 - Amadora</p>
-            <p>Portugal</p><br>
-            <b>
-                <p class="long-copy">
-                    Estamos orgulhosos de servir os nossos clientes da Amadora, e Lisboa por mais 10 anos. Nosso salão
-                    de beleza está situado em uma localização muito conveniente no centro da Amadora, a apenas 15
-                    minutos a pé da Estação de Comboio de Amadora. Nossos experientes técnicos de unhas oferecem uma
-                    ampla gama
-                    de serviços de beleza, desde acrílico e gel.
-                    Fazemos manicure e pedicure completa. Usamos esmaltes de alta qualidade e outros produtos bem
-                    conhecidos, Design artístico de unhas, Limpeza completa das unhas para garantir que suas unhas
-                    fiquem bonitas.
-                </p>
-            </b>
-
-            <div class="row">
-                <div class="col span-1-of-3 box">
-                    <img src="resources/img/phone.svg" alt="frontPicture">
-
-                    <h3>+351 963 254 009</h3>
-
-                    <p class="long-copy">
-                        Fale com um membro de nossa equipe hoje.
-                    </p>
-                </div>
-
-                <div class="col span-1-of-3 box">
-                    <img src="resources/img/email.svg" alt="frontPicture">
-                    <h3>aidinha2001@gmail.com</h3>
-
-                    <p class="long-copy">
-                        Você tem alguma pergunta? Envie um e-mail para um de nossos técnicos de unhas.
-                    </p>
-                </div>
-
-                <div class="col span-1-of-3 box">
-                    <img src="resources/img/time-svg.svg" alt="frontPicture">
-                    <h3>Horario de funcionamento</h3>
-                    <p>Segunda as Sextas - Das 09:30 as 19:30</p>
-                    <p>Sabado - Das 11:00 as 18:00</p>
-                    <p>Domingo - Fechado</p>
-                </div>
-            </div>
-
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3110.8843590814586!2d-9.234234084653508!3d38.76635627959104!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd1ecd0aedfcb2c1%3A0x30b9e4a15866e6b6!2sAida%20Nails%20%26%20Est%C3%A9tica!5e0!3m2!1sen!2suk!4v1613171676707!5m2!1sen!2suk"
-                width=100% height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
-                tabindex="0">
-            </iframe>
-    </section>
+    <div class="row gallery">
+        <figure class="gallery__item gallery__item--1">
+            <img src="resources/img/picture33.jpg" class="gallery__img" alt="nails5">
+        </figure>
+        <figure class="gallery__item gallery__item--2">
+            <img src="resources/img/picture33.jpg" class="gallery__img" alt="nails5">
+        </figure>
+        <figure class="gallery__item gallery__item--3">
+            <img src="resources/img/picture33.jpg" class="gallery__img" alt="nails5">
+        </figure>
+        <figure class="gallery__item gallery__item--4">
+            <img src="resources/img/picture33.jpg" class="gallery__img" alt="nails5">
+        </figure>
+    </div>
 
     <footer>
         <div class="section-footer">
@@ -110,8 +62,8 @@
                 <p>Portugal</p><br>
 
                 <h3>Opening Times</h3>
-                <p>Segunda as Sextas - Das 09:30 as 20:30</p>
-                <p>Sabado - Das 11:00 as 18:00</p>
+                <p>Segunda as Sextas - Das 09:30 as 19:30</p>
+                <p>Sabado - Das 09:30 as 19:30</p>
                 <p>Domingo - Fechado</p>
             </div>
             <div class="col span-1-of-3">
