--- a/prices.html
+++ b/prices.html
@@ -30,7 +30,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="prices.html">Prices</a></li>
                     <li><a href="specialoffers.html">Special Offers</a></li>
-                    <li><a href="#cities">Gallery</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
                     <li><a href="contactus.html">Contact Us</a></li>
                 </ul>
                 <button class="hamburger">&#9776;</button>
