--- a/specialoffers.html
+++ b/specialoffers.html
@@ -29,8 +29,8 @@
                 <ul class="main-nav js--menu">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="prices.html">Prices</a></li>
-                    <li><a href="#cities">Gallery</a></li>
                     <li><a href="specialoffers.html">Special Offers</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
                     <li><a href="contactus.html">Contact Us</a></li>
                 </ul>
                 <button class="hamburger">&#9776;</button>
